2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* WrapPanel.cs: Fixed ArrangeOverride.

2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItem.cs: Made it load the theme.

2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItem.cs: Added.

2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* WrapPanel.cs: Fixed MeasureOverride.

2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* WrapPanel.cs: Implemented ArrangeOverride, MeasureOverride.

2007-06-10  George Giolfan  <georgegiolfan@yahoo.com>

	* DockPanel.cs: Added call to InvalidateArrange on Dock property change.

2007-06-10  George Giolfan  <georgegiolfan@yahoo.com>

	* Canvas.cs: Fixed ArrangeOverride.

2007-06-09  George Giolfan  <georgegiolfan@yahoo.com>

	* WrapPanel.cs: Added.

2007-06-09  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Fixed MeasureOverride, removed wrong metadata overrides.

2007-06-09  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Minor improvement in MeasureOverride, finished MakeVisible.

2007-06-08  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Fixed layout.

2007-06-08  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Implemented most of IScrollInfo.

2007-06-06  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Fixed ArrangeOverride.

2007-06-06  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Started implementing IScrollInfo.

2007-06-06  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Fixed layout.

2007-06-06  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Wrong fix that makes the sample work properly.

2007-06-06  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Fixed ArrangeOverride.

2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanel.cs: Attempted an implementation of ArrangeOverride, MeasureOverride.

2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>
