@@ -1,5 +1,9 @@
 2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* TabItem.cs: Implemented OnCreateAutomationPeer, OnSelected, OnUnselected.
+
+2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* WrapPanel.cs: Fixed ArrangeOverride.
 
 2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>
